@@ -4,19 +4,20 @@ escape_char     /
 % Malay language locale for Malaysia.
 % Contributed by Kentaroh Noji <knoji@jp.ibm.com> and
 % Tetsuji Orita <orita@jp.ibm.com>.
+% Modified by Hasbullah Bin Pit (sebol)<sebol@ikhlas.com> 2001, December, 10
 
 LC_IDENTIFICATION
 title      "Malay language locale for Malaysia"
 source     "IBM Globalization Center of Competency, Yamato Software Laboratory"
 address    "1623-14, Shimotsuruma, Yamato-shi, Kanagawa-ken, 242-8502, Japan"
 contact    ""
-email      "bug-glibc@gnu.org"
+email      "bug-glibc@gnu.org, sebol@ikhlas.com"
 tel         ""
 fax         ""
 language    "Malay"
 territory   "Malaysia"
 revision    "0.92b"
-date        "2000,September,4 (XML source:2000,July,20)"
+date        "2001, December, 10"
 %
 category  "ms_MY:2000";LC_IDENTIFICATION
 category  "ms_MY:2000";LC_CTYPE
@@ -47,11 +48,11 @@ END LC_COLLATE
 LC_MONETARY
 % This is the POSIX Locale definition the LC_MONETARY category
 % generated by IBM Basic CountryPack Transformer.
-% These are generated based on XML base Locale defintion file 
+% These are generated based on XML base Locale defintion file
 % for IBM Class for Unicode.
 %
 int_curr_symbol       "<U004D><U0059><U0052><U0020>"
-currency_symbol       "<U0052>"
+currency_symbol       "<U0052><U004D>"
 mon_decimal_point     "<U002E>"
 mon_thousands_sep     "<U002C>"
 mon_grouping          3
@@ -72,7 +73,7 @@ END LC_MONETARY
 LC_NUMERIC
 % This is the POSIX Locale definition for the LC_NUMERIC category
 % generated by IBM Basic CountryPack Transformer.
-% These are generated based on XML base Locale defintion file 
+% These are generated based on XML base Locale defintion file
 % for IBM Class for Unicode.
 %
 decimal_point          "<U002E>"
@@ -85,18 +86,18 @@ END LC_NUMERIC
 LC_TIME
 % This is the POSIX Locale definition for the LC_TIME category
 % generated by IBM Basic CountryPack Transformer.
-% These are generated based on XML base Locale difintion file 
+% These are generated based on XML base Locale difintion file
 % for IBM Class for Unicode.
 %
 % Abbreviated weekday names (%a)
-abday       "<U0041><U0068><U0061>";"<U0049><U0073><U006E>";/
+abday       "<U0041><U0068><U0064>";"<U0049><U0073><U006E>";/
             "<U0053><U0065><U006C>";"<U0052><U0061><U0062>";/
             "<U004B><U0068><U0061>";"<U004A><U0075><U006D>";/
             "<U0053><U0061><U0062>"
 %
 % Full weekday names (%A)
 day         "<U0041><U0068><U0061><U0064>";"<U0049><U0073><U006E><U0069><U006E>";/
-            "<U0053><U0065><U006C><U0061><U0073><U0061>";"<U0052><U0061><U0068><U0062>";/
+            "<U0053><U0065><U006C><U0061><U0073><U0061>";"<U0052><U0061><U0062><U0075";/
             "<U004B><U0068><U0061><U006D><U0069><U0073>";"<U004A><U0075><U006D><U0061><U0061><U0074>";/
             "<U0053><U0061><U0062><U0074><U0075>"
 %
@@ -116,22 +117,22 @@ mon         "<U004A><U0061><U006E><U0075><U0061><U0072><U0069>";"<U0046><U0065><
             "<U0053><U0065><U0070><U0074><U0065><U006D><U0062><U0065><U0072>";"<U004F><U006B><U0074><U006F><U0062><U0065><U0072>";/
             "<U004E><U006F><U0076><U0065><U006D><U0062><U0065><U0072>";"<U0044><U0069><U0073><U0065><U006D><U0062><U0065><U0072>"
 %
-% Equivalent of AM PM 
+% Equivalent of AM PM
 am_pm       "";""
 %
-% Appropriate date and time representation 
+% Appropriate date and time representation
 % %A %d %b %Y %I:%M:%S  %Z
 d_t_fmt     "<U0025><U0041><U0020><U0025><U0064><U0020><U0025><U0062><U0020><U0025><U0059><U0020><U0025><U0049><U003A><U0025><U004D><U003A><U0025><U0053><U0020><U0025><U0070><U0020><U0025><U005A>"
 %
-% Appropriate date representation 
+% Appropriate date representation
 % %A %d %b %Y
 d_fmt       "<U0025><U0041><U0020><U0025><U0064><U0020><U0025><U0062><U0020><U0025><U0059>"
 %
-% Appropriate time representation 
+% Appropriate time representation
 % %I:%M:%S  %Z
 t_fmt       "<U0025><U0049><U003A><U0025><U004D><U003A><U0025><U0053><U0020><U0020><U0025><U005A>"
 %
-% Appropriate 12 h time representation (%r) 
+% Appropriate 12 h time representation (%r)
 t_fmt_ampm  "<U0025><U0049><U003A><U0025><U004D><U003A><U0025><U0053><U0020><U0025><U0070><U0020><U0025><U005A>"
 %
 END LC_TIME
@@ -146,22 +147,22 @@ LC_MESSAGES
 % ^[yY]
 yesexpr     "<U005E><U005B><U0079><U0059><U005D>"
 
-% Syntax on Unicode Regular Expression Guidelines TR#18 
+% Syntax on Unicode Regular Expression Guidelines TR#18
 % yesexpr     "<U005E><U005B><U0079><U0059><U005D>"
 
 %
-% ^[nN]
-noexpr      "<U005E><U005B><U006E><U004E><U005D>"
+% ^[nN]  --> ^[tT]
+noexpr      "<U005E><U005B><U0074><U0054><U005D>"
 
-% Syntax on Unicode Regular Expression Guidelines TR#18 
+% Syntax on Unicode Regular Expression Guidelines TR#18
 % noexpr      "<U005E><U005B><U006E><U004E><U005D>"
 %
 
-% Yes
-yesstr      "<U0059><U0065><U0073>"
+% Yes      Ya
+yesstr      "<U0059><U0061>"
 %
-% No
-nostr       "<U004E><U006F>"
+% No       Tidak
+nostr       "<U0054><U0069><U0064><U0061><U006B>"
 %
 END LC_MESSAGES
 
@@ -176,16 +177,14 @@ END LC_PAPER
 
 
 LC_NAME
-% This is the ISO_IEC TR14652 Locale definition for the LC_NAME category
-% generated by IBM Basic CountryPack Transformer.
-% 
-% 
+%  Edited By Hand by Hasbullah Pit <sebol@ikhlas.com>
+% name_mr = Encik, name_mrs = Puan , name_miss = Cik name_ms= Cik/Puan
 name_fmt    "<U0025><U0070><U0025><U0074><U0025><U0066><U0025><U0074><U0025><U0067>"
 name_gen    ""
-name_mr     "<U004D><U0072><U002E>"
-name_mrs    "<U004D><U0072><U0073><U002E>"
-name_miss   "<U004D><U0069><U0073><U0073><U002E>"
-name_ms     "<U004D><U0073><U002E>"
+name_mr     "<U0045><U0065><U0063><U0069><U006B>"
+name_mrs    "<U0050><U0075><U0061><U006E>"
+name_miss   "<U0063><U0069><U006B>"
+name_ms     "<U0063><U0069><U006B><U002F><U0050><U0075><U0061><U006E>"
 
 END LC_NAME
 
@@ -202,6 +201,7 @@ LC_TELEPHONE
 % This is the ISO_IEC TR14652 Locale definition for the LC_TELEPHONE
 % generated by IBM Basic CountryPack Transformer.
 tel_int_fmt "<U002B><U0025><U0063><U0020><U003B><U0025><U0061><U0020><U003B><U0025><U006C>"
+int_prefix     "<U0036><U0030>"
 
 END LC_TELEPHONE
 
@@ -212,5 +212,3 @@ LC_MEASUREMENT
 measurement 1
 
 END LC_MEASUREMENT
-
-
